Fix FAQ pentagon spacing issue

--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ ul.pent .cwrap {
 	position: relative;
 	width: 250px;
 	margin-right: -250px;
-	margin-top: 283px;
+	margin-top: 303px;
 	float: left;
 	text-align: right;
 }
